--- a/src/frontend/BmiGUI.fxml
+++ b/src/frontend/BmiGUI.fxml
@@ -11,12 +11,12 @@
         <TextField layoutX="149.0" layoutY="84.0" />
         <Label layoutX="31.0" layoutY="88.0" text="Age" />
         <Label layoutX="31.0" layoutY="36.0" prefHeight="18.0" prefWidth="52.0" text="Sex" />
-        <ComboBox layoutX="150.0" layoutY="31.0" prefWidth="150.0" />
+        <ComboBox fx:id="sexComboBox" layoutX="150.0" layoutY="31.0" prefWidth="150.0" />
         <Label layoutX="26.0" layoutY="134.0" text="Weight" />
         <TextField layoutX="149.0" layoutY="130.0" />
         <Label layoutX="30.0" layoutY="179.0" text="Size" />
         <TextField layoutX="149.0" layoutY="175.0" />
         <Button layoutX="25.0" layoutY="290.0" mnemonicParsing="false" text="Button" />
-        <Label layoutX="133.0" layoutY="296.0" text="Label" />
+        <Label layoutX="133.0" layoutY="296.0" text="Result" />
     </children>
 </AnchorPane>
