--- a/src/frontend/BmiGUI.fxml
+++ b/src/frontend/BmiGUI.fxml
@@ -6,17 +6,18 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import frontend.NumberField?>
 <AnchorPane prefHeight="353.0" prefWidth="337.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="frontend.BmiController">
     <children>
-        <TextField layoutX="149.0" layoutY="84.0" />
-        <Label layoutX="31.0" layoutY="88.0" text="Age" />
         <Label layoutX="31.0" layoutY="36.0" prefHeight="18.0" prefWidth="52.0" text="Sex" />
         <ComboBox fx:id="sexComboBox" layoutX="150.0" layoutY="31.0" prefWidth="150.0" />
+        <Label layoutX="31.0" layoutY="88.0" text="Age" />
+        <NumberField fx:id="ageTextField" layoutX="149.0" layoutY="84.0" />
         <Label layoutX="26.0" layoutY="134.0" text="Weight" />
-        <TextField layoutX="149.0" layoutY="130.0" />
+        <NumberField fx:id="weightTextField" layoutX="149.0" layoutY="130.0" />
         <Label layoutX="30.0" layoutY="179.0" text="Size" />
-        <TextField layoutX="149.0" layoutY="175.0" />
-        <Button layoutX="25.0" layoutY="290.0" mnemonicParsing="false" text="Button" />
-        <Label layoutX="133.0" layoutY="296.0" text="Result" />
+        <NumberField fx:id="sizeTextField" layoutX="149.0" layoutY="175.0" />
+        <Button fx:id="calculateButton" layoutX="25.0" layoutY="290.0" mnemonicParsing="false" text="Calculate" />
+        <Label fx:id="resultLabel" layoutX="133.0" layoutY="296.0" text="Result" />
     </children>
 </AnchorPane>
