--- a/src/frontend/BmiGUI.fxml
+++ b/src/frontend/BmiGUI.fxml
@@ -17,7 +17,7 @@
         <NumberField fx:id="weightTextField" layoutX="149.0" layoutY="130.0" />
         <Label layoutX="30.0" layoutY="179.0" text="Size" />
         <NumberField fx:id="sizeTextField" layoutX="149.0" layoutY="175.0" />
-        <Button fx:id="calculateButton" layoutX="25.0" layoutY="290.0" mnemonicParsing="false" text="Calculate" />
+        <Button fx:id="calculateButton" layoutX="25.0" layoutY="290.0" mnemonicParsing="false" text="Calculate" onAction="#calculate"/>
         <Label fx:id="resultLabel" layoutX="133.0" layoutY="296.0" text="Result" />
     </children>
 </AnchorPane>
