--- a/src/frontend/BmiGUI.fxml
+++ b/src/frontend/BmiGUI.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="353.0" prefWidth="337.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="frontend.BmiController">
+<AnchorPane prefHeight="353.0" prefWidth="337.0" xmlns="http://javafx.com/javafx/8.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="frontend.BmiController">
     <children>
         <Label layoutX="31.0" layoutY="36.0" prefHeight="18.0" prefWidth="52.0" text="Sex" />
         <ComboBox fx:id="sexComboBox" layoutX="150.0" layoutY="31.0" prefWidth="150.0" />
